--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "compile": "node_modules/.bin/truffle compile",
-    "coverage": "SOLIDITY_COVERAGE=true bash scripts/test.sh",
+    "coverage": "node_modules/.bin/truffle run coverage",
     "docs-publish": "npm run solidity-docgen && cd docs/website && npm i && npm run publish-gh-pages",
     "docs-start": "npm run solidity-docgen && cd docs/website && npm i && npm start",
     "make_spec_test": "bash scripts/make_spec_hbbft_test.sh",
@@ -37,13 +37,13 @@
     "chai-as-promised": "^7.1.1",
     "chai-bn": "^0.1.1",
     "eth-gas-reporter": "^0.2.17",
-    "ganache-cli": "^6.10.1",
+    "ganache-cli": "^6.12.1",
     "mochawesome": "^6.1.1",
     "node-fetch": "^2.6.0",
     "solc": "^0.5.16",
     "solhint": "^2.0.0",
-    "solidity-coverage": "^0.7.11",
-    "truffle": "^5.1.42",
-    "web3": "^1.2.11"
+    "solidity-coverage": "^0.7.13",
+    "truffle": "^5.1.58",
+    "web3": "^1.3.1"
   }
 }
